<resources>
    <string name="app_name">MapsBasics</string>
    <string name="main_btn_lite_list">List Map</string>
    <string name="main_btn_artist_list">"Artists "</string>
    <string name="main_btn_form_lite">Form Map</string>
    <string name="btn_panorama">StreetView</string>
    <string name="btn_new_processor">Nuevo procesador</string>
    <string name="btn_first_map">Primer mapa</string>
    <string name="btn_camera_view">Vista y camara</string>
    <string name="btn_control_gestures">Control y gestos</string>
    <string name="btn_normal">Normal</string>
    <string name="btn_hybrid">Hybrid</string>
    <string name="btn_satellite">Satellite</string>
    <string name="btn_terrain">Terreno</string>
    <string name="btn_none">N/A</string>
    <string name="btn_event">Eventos</string>


    <string name="location_permission_denied">Permiso denegado. Por favor intente de nuevo y otorgue el permiso de ubicación.\nSi el permiso ha sido denegado permanentemente, este puede habilitarse en Configuración &gt; Aplicaciones &gt; Maps Basics.</string>
    <string name="permission_required_toast">El permiso de ubicación es requerido.</string>
    <string name="permission_rationale_location">Se requiere acceder al servicio de ubicación</string>
    <string name="btn_my_location">Mi ubicacion</string>
    <string name="btn_my_marker">Marcadores</string>
    <string name="btn_shapes">Formas</string>
    <string name="btn_ground_overlay">Superposiciones de suelo</string>
    <string name="btn_tile_overlay">Superposiciones de mosaicos</string>
    <string name="card_lite_title">Malaga</string>
    <string name="card_lite_description">Ven a visitarnos y disfruta de unas vacaciones increibles</string>
    <string name="btn_lite_mode">Lite Mode</string>
    <string name="btn_split_street_view">Pantalla dividida</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_surnames">Apellidos</string>
    <string name="hin_birth_location">Lugar de nacimiento</string>
    <string name="form_btn_save">Guardar</string>
    <string name="form_description_marker">Marcador de ubicación</string>
    <string name="dialog_map_title">Editar ubicación</string>
    <string name="btn_location_save">Listo</string>
    <string name="dialog_location_card_title">Ubicación seleccionada:</string>
    <string name="dialog_address_invalid">Ubicación no valida</string>

</resources>