<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".topics.FirstMapActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black_transparent"
        android:visibility="gone"
        tools:visibility="visible"
        app:checkedButton="@+id/btnNormal"
        app:singleSelection="true"
        android:layout_marginBottom="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_normal"
            android:minWidth="0dp"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"
            />

        <Button
            android:id="@+id/btnHybrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_hybrid"
            android:minWidth="0dp"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"
            />

        <Button
            android:id="@+id/btnSatellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_satellite"
            android:minWidth="0dp"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"
            />

        <Button
            android:id="@+id/btnTerrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_terrain"
            android:minWidth="0dp"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"
            />

        <Button
            android:id="@+id/btnNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_none"
            android:minWidth="0dp"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"
            />




    </com.google.android.material.button.MaterialButtonToggleGroup>
</androidx.constraintlayout.widget.ConstraintLayout>