<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding_default"
    tools:context=".artistForm.FormActivity">

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="@dimen/img_form_size"
        android:layout_height="@dimen/img_form_size"
        tools:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        app:startIconDrawable="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPhoto"
        app:layout_constraintEnd_toStartOf="@+id/tilSurnames"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSurnames"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_surnames"
        app:startIconDrawable="@drawable/ic_person"
        app:layout_constraintTop_toBottomOf="@+id/imgPhoto"
        app:layout_constraintStart_toEndOf="@+id/tilName"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSurnames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btnEditLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_location_alt"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/tilSurnames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tilLocation"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hin_birth_location"
        app:startIconDrawable="@drawable/ic_location_on"
        app:layout_constraintTop_toBottomOf="@+id/tilName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEditLocation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:maxLines="2"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_btn_save"
        app:icon="@drawable/ic_cloud_upload"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/tilLocation"
        />

    <TextView
        android:id="@+id/tvCloud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        tools:text="Datos guardados"
        app:layout_constraintTop_toBottomOf="@id/btnSave"
        />

</androidx.constraintlayout.widget.ConstraintLayout>